# Milk-Link

./: .gitignore  DEPLOY.md  Dockerfile  README.md  alembic.ini  check-db-status.sql  docker-compose.yml  entrypoint.sh  fix-migration.sql  fix-server-migration.sh  manual-upgrade.sql  mosquitto.conf  pyproject.toml  remove-old-amount-ml.sql  rollback-for-redeploy.sql  set-final-version.sql
alembic/: env.py
alembic/versions/: 360b08025977_add_unit_and_amount_value_fields.py  a2555c5f3358_create_feeding_records_table.py  b3f1a8e2c047_add_record_type_to_feeding_records.py
app/: config.py  database.py  main.py  models.py  schemas.py
app/services/: export.py  feeding.py  mqtt.py  reports.py  wechat.py
app/static/: admin.html
firmware/m5stack/main/: config.h.example  main.ino
